--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-flask
-python-telegram-bot==13.15
+flask==2.3.3                     # Telegram webhook 서버
+python-telegram-bot==13.15       # 봇 명령 및 패널 응답
+pandas==2.0.3                    # 데이터프레임 처리 (조건검색, 포지션, 로그 등)
+pykiwoom==0.1.1 ; sys_platform == "win32" # 키움증권 API 연동 (Windows에서만 설치)
+
+# 부가적이지만 필요한 경우 (선택)
+python-dotenv==1.0.0             # .env 환경변수 관리
