--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,40 @@
-venv/
+# ✅ 환경 설정 파일
+.env
+.env.*
+
+# ✅ Python 캐시
 __pycache__/
 *.pyc
-.env
+*.pyo
+*.pyd
+
+# ✅ 가상환경 폴더
+venv/
+env/
+.venv/
+
+# ✅ VSCode 설정
+.vscode/
+
+# ✅ 로그 및 데이터
+logs/
+*.log
+*.bak
+*.tmp
+*.swp
+*~
+
+# ✅ Kiwoom API 관련
+OpenAPI/
+opstarter.log
+system.log
+
+# ✅ OS별 파일
+.DS_Store
+Thumbs.db
+
+# ✅ 프로젝트 결과물
 trade_log.csv
 status.json
 data/
-logs/".env" 
+".env" 
